--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/pestcontrolblackburn-07-22/">https://rank-fortress-digital-agency.github.io/pestcontrolblackburn-07-22/</a><br>
-                <a target="_bLank" href="http://pestcontrolblackburn-07-22.s3-website-ap-southeast-1.amazonaws.com">http://pestcontrolblackburn-07-22.s3-website-ap-southeast-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://comfy-wisp-383db6.netlify.app/">https://comfy-wisp-383db6.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/pestcontrolblackburn-08-22/">https://rank-fortress-digital-agency.github.io/pestcontrolblackburn-08-22/</a><br>
+                <a target="_bLank" href="http://pestcontrolblackburn-08-22.s3-website.ap-south-1.amazonaws.com">http://pestcontrolblackburn-08-22.s3-website.ap-south-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://steady-faloodeh-3c7973.netlify.app/">https://steady-faloodeh-3c7973.netlify.app/</a><br>
             </section>
 
         </div>
